More improvements on tests